# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml  run-tests.yml
page_loader/: __init__.py  io.py  load.py  loader.py  logging.py  naming.py  web.py
page_loader/io/: __init__.py  fs.py  web.py
page_loader/scripts/: page_loader.py
tests/: fixtures_paths.py  fixtures_urls.py  io.py  test_download.py
tests/fixtures/: example.html  expected_example.html  style.css
