[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page downloader"
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers"
]
authors = ["Choolkov <s.v.chuklov@ya.ru>"]
repository = "https://github.com/Choolkov/python-project-lvl3.git"
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
wemake-python-styleguide = "^0.16.1"
black = "^22.6.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"
pook = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"